--- a/packages/core/client/src/locale/pl-PL.json
+++ b/packages/core/client/src/locale/pl-PL.json
@@ -345,7 +345,7 @@
     "Add text": "Dodaj tekst",
     "Filterable fields": "Pola do filtrowania",
     "Edit button": "Edytuj przycisk",
-    "Edit link":"Edytuj link",
+    "Edit link": "Edytuj link",
     "Hide": "Ukryj",
     "Enable actions": "Włącz akcje",
     "Import": "Importuj",
@@ -948,14 +948,290 @@
     "Not selected": "Nie wybrano",
     "Enable link": "Włącz link",
     "Associate": "Kojarz",
-    "Associated records":"Powiązane rekordy"
-    "Automatic close":"Zamknij automatycznie",
-    "Manually close":"Zamknij manulanie",
-    "Popup close method":"Metoda zamknięcia okna",
-    "Table size":"Wielkość tabeli",
-    "Remains the same":"Pozostaw bez zmian",
-    "Changed to":"Zmień na",
-    "Clear":"Wyczyść",
-    "Current collection":"Aktualna kolekcja",
-    "Other collections":"Inne kolekcje"
+    "Associated records": "Powiązane rekordy",
+    "Automatic close": "Zamknij automatycznie",
+    "Manually close": "Zamknij manulanie",
+    "Popup close method": "Metoda zamknięcia okna",
+    "Table size": "Wielkość tabeli",
+    "Remains the same": "Pozostaw bez zmian",
+    "Changed to": "Zmień na",
+    "Clear": "Wyczyść",
+    "Current collection": "Aktualna kolekcja",
+    "Other collections": "Inne kolekcje",
+    "Constant value": "Stała wartość",
+    "Current form": "Obecny formularz",
+    "Parent record": "Rekord nadrzędny",
+    "Parent popup record": "Rekord nadrzędny okna",
+    "Data template": "Szablon danych",
+    "Odd": "Nieparzysty",
+    "Even": "Parzysty",
+    "Please configure the URL": "Skonfiguruj link",
+    "This variable has been deprecated and can be replaced with \"Current form\"": "Ta zmienna została uznana za przestarzałą i można ją zastąpić przez \"Current form\"",
+    "Accuracy": "Dokładność",
+    "ACL": "ACL",
+    "Action": "Działanie",
+    "Add": "Dodać",
+    "Add attach": "Dodaj załącznik",
+    "Add new mode": "Dodaj nowy tryb",
+    "Add plugin": "Dodaj wtyczkę",
+    "Add type": "Dodaj typ",
+    "After clicking the custom button": "Po kliknięciu przycisku niestandardowego",
+    "After successful bulk update": "Po udanej aktualizacji zbiorczej",
+    "After successful request": "Po udanym żądaniu",
+    "After successful save": "Po pomyślnym zapisaniu",
+    "After successful update": "Po udanej aktualizacji",
+    "All plugin settings": "Wszystkie ustawienia wtyczki",
+    "Allow dissociate": "Pozwól na dysocjację",
+    "Allow multiple selection": "Zezwalaj na wielokrotny wybór",
+    "Allows configuration of the whole system": "Umożliwia konfigurację całego systemu",
+    "Allows to clear cache": "Umożliwia wyczyszczenie pamięci podręcznej",
+    "Allows to install": "Umożliwia instalację",
+    "Any succeeded or failed": "Każdy udany lub nieudany",
+    "App error": "Błąd aplikacji",
+    "Application reloading": "Przeładowanie aplikacji",
+    "Are you sure to delete this plugin": "Czy na pewno chcesz usunąć tę wtyczkę?",
+    "Are you sure to delete this plugin?": "Czy na pewno chcesz usunąć tę wtyczkę?",
+    "Are you sure to disable this plugin?": "Czy na pewno chcesz wyłączyć tę wtyczkę?",
+    "Are you sure you want to perform the {{title}} action?": "Czy na pewno chcesz wykonać akcję {{title}}?",
+    "Assign  data scope for the template": "Przypisz zakres danych do szablonu",
+    "Assign data scope for the template": "Przypisz zakres danych do szablonu",
+    "Audit logs": "Dzienniki audytu",
+    "Author": "Autor",
+    "AutoGenId": "AutoGenId",
+    "Automatically drop objects that depend on the collection (such as views)": "Automatycznie upuszczaj obiekty zależne od kolekcji (takie jak widoki)",
+    "Block": "Blok",
+    "Blocks": "Bloki",
+    "Bookmark": "Zakładka w książce",
+    "Boolean": "Wartość logiczna",
+    "Calculation engine": "Silnik obliczeniowy",
+    "Cascade Select": "Wybierz kaskadę",
+    "Changelog": "Dziennik zmian",
+    "Children": "Dzieci",
+    "Clear default value": "Wyczyść wartość domyślną",
+    "Click or drag file to this area to upload": "Kliknij lub przeciągnij plik do tego obszaru, aby go przesłać",
+    "Collection fields": "Pola kolekcji",
+    "Collection manager": "Menedżer kolekcji",
+    "Coming soon...": "Już wkrótce...",
+    "Compact theme": "Kompaktowy motyw",
+    "Compressed file url": "Skompresowany adres URL pliku",
+    "Configure field": "Skonfiguruj pole",
+    "Continue after any branch succeeded": "Kontynuuj po pomyślnym zakończeniu dowolnego rozgałęzienia",
+    "Create": "Tworzyć",
+    "Create inverse field in the target collection": "Utwórz pole odwrotne w kolekcji docelowej",
+    "CreatedAt": "Utworzono",
+    "CreatedBy": "Utworzony przez",
+    "Current object": "Aktualny obiekt",
+    "Current popup record": "Aktualny rekord wyskakującego okienka",
+    "Data fields": "Pola danych",
+    "Data model": "Model danych",
+    "Data Model": "Model danych",
+    "Data model tools": "Narzędzia modelu danych",
+    "data source": "źródło danych",
+    "Data source": "Źródło danych",
+    "Data source permissions": "Uprawnienia źródła danych",
+    "DataSource": "Źródło danych",
+    "Default theme": "Domyślny motyw",
+    "Default title for each record": "Domyślny tytuł każdego rekordu",
+    "Department name": "Nazwa działu",
+    "Departments": "Działy",
+    "Dependencies check": "Sprawdzenie zależności",
+    "Dependencies check failed": "Sprawdzanie zależności nie powiodło się",
+    "Dependencies compatibility check": "Sprawdzanie zgodności zależności",
+    "Disable": "Wyłączyć",
+    "Display <icon></icon> when unchecked": "Wyświetlaj <icon></icon>, gdy odznaczone",
+    "Display data template selector": "Wyświetl selektor szablonu danych",
+    "DisplayName": "Nazwa wyświetlana",
+    "Divide by": "Podziel przez",
+    "Docs": "Dokumenty",
+    "Done": "Zrobione",
+    "Download": "Pobierać",
+    "Download logs": "Pobierz logi",
+    "Drag and drop the file here or click to upload": "Przeciągnij i upuść plik tutaj lub kliknij, aby przesłać",
+    "Dropdown": "Lista rozwijana",
+    "Duplicate and continue": "Duplikuj i kontynuuj",
+    "Duplicating": "Powielanie",
+    "Duration": "Czas trwania",
+    "Dynamic value": "Wartość dynamiczna",
+    "Enable": "Włączać",
+    "End Status": "Stan zakończenia",
+    "Execute": "Wykonać",
+    "Fail and exit": "Porażka i wyjdź",
+    "Failed to load plugin": "Nie udało się załadować wtyczki",
+    "Feedback": "Informacja zwrotna",
+    "Field value changes": "Zmiana wartości pola",
+    "Field value do not meet the requirements": "Wartość pola nie spełnia wymagań",
+    "Field value size is": "Rozmiar wartości pola wynosi",
+    "File manager": "Menedżer plików",
+    "File size exceeds the limit": "Rozmiar pliku przekracza limit",
+    "File size should not exceed {{size}}.": "Rozmiar pliku nie powinien przekraczać {{size}}.",
+    "File type is not allowed": "Typ pliku jest niedozwolony",
+    "Filter data based on the specific field": "Filtruj dane na podstawie konkretnego pola",
+    "Filter target key": "Filtruj klucz docelowy",
+    "Find by the following fields": "Znajdź według następujących pól",
+    "First or create": "Najpierw lub utwórz",
+    "Fix block": "Napraw blok",
+    "Formula.js supports most Microsoft Excel formula functions.": "Formula.js obsługuje większość funkcji formuł programu Microsoft Excel.",
+    "Grouped sorting": "Sortowanie grupowe",
+    "Handbook": "Podręcznik",
+    "Home page": "Strona główna",
+    "Homepage": "Strona główna",
+    "Identifier for program usage. Support letters": "Identyfikator użycia programu. Listy wsparcia",
+    "If a collection lacks a primary key": "Jeśli w kolekcji brakuje klucza podstawowego",
+    "If collection inherits": "Jeśli kolekcja dziedziczy",
+    "If the compatibility check fails": "Jeśli sprawdzenie zgodności nie powiedzie się",
+    "In configuration mode": "W trybie konfiguracji",
+    "Incomplete uploading files need to be resolved": "Należy rozwiązać problem z niekompletnym przesyłaniem plików",
+    "Index": "Indeks",
+    "Inner": "Wewnętrzny",
+    "Input +": "Wejście +",
+    "Installing": "Instalowanie",
+    "Invalid JSON format": "Nieprawidłowy format JSON",
+    "Inverse field display name": "Odwrotna nazwa wyświetlana pola",
+    "Inverse field name": "Odwrotna nazwa pola",
+    "Last updated": "Ostatnia aktualizacja",
+    "Leave it blank": "Zostaw to puste",
+    "License": "Licencja",
+    "Linkage with form fields": "Powiązanie z polami formularza",
+    "loading": "załadunek",
+    "Logging and monitoring": "Rejestrowanie i monitorowanie",
+    "Main": "Główny",
+    "Main department": "Główny dział",
+    "Manage all settings": "Zarządzaj wszystkimi ustawieniami",
+    "Marketplace": "Rynek",
+    "Math.js comes with a large set of built-in functions and constants": "Math.js zawiera duży zestaw wbudowanych funkcji i stałych",
+    "Menu": "Menu",
+    "Millisecond": "milisekunda",
+    "Modal add": "Dodatek modalny",
+    "More details": "Więcej szczegółów",
+    "Multiply by": "Pomnóż przez",
+    "name is required": "imię i nazwisko jest wymagane",
+    "NaN": "NaN",
+    "New plugin": "Nowa wtyczka",
+    "No CHANGELOG.md file": "Brak pliku CHANGELOG.md",
+    "No configuration available.": "Brak dostępnej konfiguracji.",
+    "No README.md file": "Brak pliku README.md",
+    "Normal": "Normalna",
+    "Now": "Teraz",
+    "Npm package": "Pakiet Npm",
+    "Npm package name": "Nazwa pakietu Npm",
+    "Null": "Null",
+    "Official plugin": "Oficjalna wtyczka",
+    "Other": "Inny",
+    "Owners": "Właściciele",
+    "PackageName": "Nazwa pakietu",
+    "Page number": "Numer strony",
+    "Page size": "Rozmiar strony",
+    "Parent": "Roślina mateczna",
+    "Parent ID": "Rodzic ID",
+    "Parent object": "Obiekt nadrzędny",
+    "Perform the {{title}}": "Wykonaj {{title}}",
+    "Permission deined": "Zezwolenie wydane",
+    "Permission denied": "Odmowa pozwolenia",
+    "Please configure the duplicate fields": "Skonfiguruj zduplikowane pola",
+    "Please confirm the SQL statement first": "Najpierw potwierdź instrukcję SQL",
+    "Please fill in the iframe URL": "Wpisz adres URL elementu iframe",
+    "Please select the records to be updated": "Proszę wybrać rekordy do aktualizacji",
+    "Please use a valid SELECT or WITH AS statement": "Użyj prawidłowej instrukcji SELECT lub WITH AS",
+    "Plugin dependencies check failed": "Sprawdzanie zależności wtyczki nie powiodło się",
+    "Plugin dependency version mismatch": "Niezgodność wersji zależności wtyczki",
+    "Plugin loading failed. Please check the server logs.": "Ładowanie wtyczki nie powiodło się. Proszę sprawdzić logi serwera.",
+    "Plugin source": "Źródło wtyczki",
+    "Plugin starting...": "Uruchamianie wtyczki...",
+    "Plugin stopping...": "Zatrzymywanie wtyczki...",
+    "Plugin tab name": "Nazwa karty wtyczki",
+    "Plugin Zip File": "Plik zip wtyczki",
+    "Plugin's version": "Wersja wtyczki",
+    "Pop-up": "Wyskakujące okienko",
+    "Prefix": "Prefiks",
+    "Preset fields": "Wstępnie ustawione pola",
+    "Prettify": "Udoskonalaj",
+    "Primary key": "Klucz podstawowy",
+    "Providing certain collections as options for users": "Udostępnianie użytkownikom określonych kolekcji jako opcji",
+    "Province/city/area name": "Nazwa prowincji/miasta/obszaru",
+    "Quick add": "Szybkie dodawanie",
+    "Quick create": "Szybkie tworzenie",
+    "Quick duplicate": "Szybki duplikat",
+    "Randomly generated and can be modified. Support letters": "Generowane losowo i można je modyfikować. Listy wsparcia",
+    "re-download file": "pobierz ponownie plik",
+    "Readme": "Przeczytaj",
+    "Record ID": "Identyfikator rekordu",
+    "Record unique key": "Nagraj unikalny klucz",
+    "Refresh data on close": "Odśwież dane po zamknięciu",
+    "Reload application": "Załaduj ponownie aplikację",
+    "Remove": "Usunń",
+    "Render Failed": "Renderowanie nie powiodło się",
+    "Request body": "Treść żądania",
+    "Request headers": "Nagłówki żądań",
+    "Request method": "Metoda żądania",
+    "Request query parameters": "Zapytanie o parametry zapytania",
+    "Request success": "Żądanie zakończone sukcesem",
+    "Request URL": "Adres URL żądania",
+    "Result": "Wynik",
+    "Return to the main application": "Wróć do głównej aplikacji",
+    "Save mode": "Tryb oszczędzania",
+    "Save record": "Zapisz rekord",
+    "Scientifix notation": "Notacja Scientifix",
+    "Search plugin": "Wtyczka wyszukiwania",
+    "Second": "Drugi",
+    "Security": "Bezpieczeństwo",
+    "Select a variable": "Wybierz zmienną",
+    "Select an existing piece of data as the initialization data for the form": "Wybierz istniejący fragment danych jako dane inicjujące dla formularza",
+    "Select status": "Wybierz stan",
+    "Selector": "Selektor",
+    "Separator": "Separator",
+    "Set Template Engine": "Ustaw silnik szablonów",
+    "Sign in with another account": "Zaloguj się na inne konto",
+    "Sign up successfully": "Zarejestruj się pomyślnie",
+    "Simple string replacement": "Prosta wymiana string",
+    "Sorry": "Przepraszam",
+    "String": "String",
+    "Succeed and continue": "Sukces i kontynuacja",
+    "Suffix": "Przyrostek",
+    "Superior department": "Wyższy dział",
+    "Support for a single or bulk upload": "Obsługa przesyłania pojedynczego lub zbiorczego",
+    "Support for a single or bulk upload.": "Obsługa przesyłania pojedynczego lub zbiorczego.",
+    "Sync successfully": "Synchronizacja pomyślna",
+    "Syntax references": "Odniesienia do składni",
+    "System": "System",
+    "System & security": "System i bezpieczeństwo",
+    "System management": "Zarządzanie systemem",
+    "System variables": "Zmienne systemowe",
+    "Table selected records": "Tabela wybranych rekordów",
+    "Tag": "Tag",
+    "Tag color field": "Pole koloru tag",
+    "Template Data": "Dane szablonu",
+    "The application is reloading": "Aplikacja ładuje się ponownie",
+    "The current dependency version of the plugin does not match the version of the application and may not work properly. Are you sure you want to continue enabling the plugin?": "Aktualna wersja zależności wtyczki nie jest zgodna z wersją aplikacji i może nie działać poprawnie. Czy na pewno chcesz kontynuować włączanie wtyczki?",
+    "The current user only has the UI configuration permission": "Bieżący użytkownik ma tylko uprawnienia do konfiguracji interfejsu użytkownika",
+    "The deletion was successful.": "Usunięcie powiodło się.",
+    "The following field types are not compatible and do not support output and display": "Następujące typy pól nie są kompatybilne i nie obsługują danych wyjściowych ani wyświetlania",
+    "The selected fields will automatically populate the form": "Wybrane pola automatycznie wypełnią formularz",
+    "The title field is used to identify the template record": "Pole tytułu służy do identyfikacji rekordu szablonu",
+    "The will interrupt service": "Spowoduje to przerwanie usługi",
+    "Third party services": "Usługi stron trzecich",
+    "This is a demo text": "To jest tekst demonstracyjny",
+    "This is likely a NocoBase internals bug. Please open an issue at <1>here</1>": "Jest to prawdopodobnie błąd wewnętrzny NocoBase. Otwórz problem pod adresem <1>tutaj</1>",
+    "Try again": "Spróbuj ponownie",
+    "Unit conversion": "Konwersja jednostek",
+    "Unix Timestamp": "Znacznik czasu Unix",
+    "Unknown field type": "Nieznany typ pola",
+    "Unnamed": "Anonimowy",
+    "Update all data?": "Zaktualizować wszystkie dane?",
+    "Update or create": "Zaktualizuj lub utwórz",
+    "Update plugin": "Zaktualizuj wtyczkę",
+    "UpdatedAt": "Zaktualizowano o godz",
+    "UpdatedBy": "Zaktualizowano przez",
+    "Upgrade": "Aktualizacja",
+    "Upload new version": "Prześlij nową wersję",
+    "Upload plugin": "Prześlij wtyczkę",
+    "URL": "Adres URL",
+    "Use the same time zone (GMT) for all users": "Użyj tej samej strefy czasowej (GMT) dla wszystkich użytkowników",
+    "Used for drag and drop sorting scenarios": "Używany do scenariuszy sortowania metodą „przeciągnij i upuść”.",
+    "User": "Użytkownik",
+    "Username": "Nazwa użytkownika",
+    "Version": "Wersja",
+    "Version range": "Zakres wersji",
+    "View all plugins": "Wyświetl wszystkie wtyczki",
+    "When a field is selected for grouping": "Gdy pole zostanie wybrane do grupowania",
+    "When submitting the following fields": "Podczas przesyłania następujących pól"
 }
