--- a/packages/core/client/src/locale/pl-PL.json
+++ b/packages/core/client/src/locale/pl-PL.json
@@ -683,9 +683,7 @@
     "Danger red": "Czerwony",
     "Secondary confirmation": "Potwierdzenie dwuetapowe",
     "Perform the Custom request": "Wykonaj niestandardowe żądanie",
-    "Perform the {{title}}": "Wykonaj {{title}}",
     "Are you sure you want to perform the Custom request action?": "Czy na pewno chcesz wykonać akcję niestandardowego żądania?",
-    "Are you sure you want to perform the {{title}} action?": "Czy na pewno chcesz wykonać {{title}} żądania?",
     "Enable secondary confirmation": "Włącz potwierdzenie dwuetapowe",
     "Content": "Zawartość",
     "Refresh data on action": "Odśwież dane po akcji",
@@ -950,16 +948,6 @@
     "Not selected": "Nie wybrano",
     "Enable link": "Włącz link",
     "Associate": "Kojarz",
-    "Associated records": "Powiązane rekordy",
-    "Automatic close": "Zamknij automatycznie",
-    "Manually close": "Zamknij manulanie",
-    "Popup close method": "Metoda zamknięcia okna",
-    "Table size": "Wielkość tabeli",
-    "Remains the same": "Pozostaw bez zmian",
-    "Changed to": "Zmień na",
-    "Clear": "Wyczyść",
-    "Current collection": "Aktualna kolekcja",
-    "Other collections": "Inne kolekcje",
     "Constant value": "Stała wartość",
     "Current form": "Obecny formularz",
     "Parent record": "Rekord nadrzędny",
@@ -1019,7 +1007,6 @@
     "Configure field": "Skonfiguruj pole",
     "Continue after any branch succeeded": "Kontynuuj po pomyślnym zakończeniu dowolnego rozgałęzienia",
     "Create": "Tworzyć",
-    "Create inverse field in the target collection": "Utwórz pole odwrotne w kolekcji docelowej",
     "CreatedAt": "Utworzono",
     "CreatedBy": "Utworzony przez",
     "Current object": "Aktualny obiekt",
@@ -1049,7 +1036,6 @@
     "Download": "Pobierać",
     "Download logs": "Pobierz logi",
     "Drag and drop the file here or click to upload": "Przeciągnij i upuść plik tutaj lub kliknij, aby przesłać",
-    "Dropdown": "Lista rozwijana",
     "Duplicate and continue": "Duplikuj i kontynuuj",
     "Duplicating": "Powielanie",
     "Duration": "Czas trwania",
@@ -1143,7 +1129,6 @@
     "Plugin tab name": "Nazwa karty wtyczki",
     "Plugin Zip File": "Plik zip wtyczki",
     "Plugin's version": "Wersja wtyczki",
-    "Pop-up": "Wyskakujące okienko",
     "Prefix": "Prefiks",
     "Preset fields": "Wstępnie ustawione pola",
     "Prettify": "Udoskonalaj",
@@ -1151,7 +1136,6 @@
     "Providing certain collections as options for users": "Udostępnianie użytkownikom określonych kolekcji jako opcji",
     "Province/city/area name": "Nazwa prowincji/miasta/obszaru",
     "Quick add": "Szybkie dodawanie",
-    "Quick create": "Szybkie tworzenie",
     "Quick duplicate": "Szybki duplikat",
     "Randomly generated and can be modified. Support letters": "Generowane losowo i można je modyfikować. Listy wsparcia",
     "re-download file": "pobierz ponownie plik",
@@ -1170,7 +1154,6 @@
     "Request URL": "Adres URL żądania",
     "Result": "Wynik",
     "Return to the main application": "Wróć do głównej aplikacji",
-    "Save mode": "Tryb oszczędzania",
     "Save record": "Zapisz rekord",
     "Scientifix notation": "Notacja Scientifix",
     "Search plugin": "Wtyczka wyszukiwania",
@@ -1235,7 +1218,7 @@
     "Version range": "Zakres wersji",
     "View all plugins": "Wyświetl wszystkie wtyczki",
     "When a field is selected for grouping": "Gdy pole zostanie wybrane do grupowania",
-    "When submitting the following fields": "Podczas przesyłania następujących pól"
+    "When submitting the following fields": "Podczas przesyłania następujących pól",
     "Associated records":"Powiązane rekordy",
     "Automatic close":"Zamknij automatycznie",
     "Manually close":"Zamknij manulanie",
