--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -116,7 +116,7 @@
     "Table": "Tabella",
     "Table OID(Inheritance)": "Tabella OID (eredità)",
     "Form": "Modulo",
-    "List": "Lista",
+    "List": "Elenco",
     "Grid Card": "Scheda griglia",
     "pixels": "pixel",
     "Screen size": "Dimensione dello schermo",
