--- a/packages/plugins/@nocobase/plugin-action-export/src/locale/pl-PL.json
+++ b/packages/plugins/@nocobase/plugin-action-export/src/locale/pl-PL.json
@@ -1,5 +1,5 @@
 {
-  "Export warning": "Możesz eksportować maksymalnie {{limit}} wierszy danych na raz, wszelkie nadmiarowe dane zostaną zignorowane.",
+  "Export warning": "Czy chesz wyksportować dane?.",
   "Start export": "Rozpocznij eksport",
   "True": "Prawda",
   "False": "Fałsz"
