--- a/packages/core/client/src/locale/pl-PL.json
+++ b/packages/core/client/src/locale/pl-PL.json
@@ -1195,7 +1195,7 @@
     "The will interrupt service": "Spowoduje to przerwanie usługi",
     "Third party services": "Usługi stron trzecich",
     "This is a demo text": "To jest tekst demonstracyjny",
-    "This is likely a NocoBase internals bug. Please open an issue at <1>here</1>": "Jest to prawdopodobnie błąd wewnętrzny NocoBase. Otwórz problem pod adresem <1>tutaj</1>",
+    "This is likely a NocoBase internals bug. Please open an issue at <1>here</1>": "Jest to prawdopodobnie błąd wewnętrzny ERPSPACE. Otwórz problem pod adresem <1>here</1>",
     "Try again": "Spróbuj ponownie",
     "Unit conversion": "Konwersja jednostek",
     "Unix Timestamp": "Znacznik czasu Unix",
