--- a/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-block-template/src/locale/en-US.json
@@ -33,5 +33,6 @@
   "Keep the created blocks?": "Keep the created blocks?",
   "Please select the records you want to delete": "Please select the records you want to delete",
   "Search and select template": "Search and select template",
-  "This is part of a template, deletion is not allowed": "This is part of a template, deletion is not allowed"
+  "This is part of a template, deletion is not allowed": "This is part of a template, deletion is not allowed",
+  "This block is using some reference templates, please convert to duplicate template first.": "This block is using some reference templates, please convert to duplicate template first."
 }
