--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
@@ -96,6 +96,6 @@
   "Fixed height": "Altezza fissa",
   "Show background": "Mostra sfondo",
   "Show padding": "Mostra spaziatura interna",
-  "Distinct": "Distinto",
+  "Distinct": "Rimuovi duplicati",
   "Auto refresh": "Aggiornamento automatico"
 }
