--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
@@ -80,7 +80,7 @@
   "Date range": "Intervallo date",
   "Time range": "Intervallo tempo",
   "Edit field properties": "Modifica proprietà del campo",
-  "Select a source field to use metadata of the field": "Seleziona un campo sorgente per utilizzare i metadati del campo",
+  "Select a source field to use metadata of the field": "Seleziona un campo origine per utilizzare i metadati del campo",
   "Original field": "Campo originale",
   "Transformation": "Trasformazione",
   "Add transformation": "Aggiungi trasformazione",
