--- a/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/it-IT.json
@@ -1,7 +1,7 @@
 {
   "Synchronize": "Sincronizza",
-  "Source name": "Nome sorgente",
-  "Source display name": "Nome visualizzato sorgente",
+  "Source name": "Nome origine",
+  "Source display name": "Nome visualizzato origine",
   "Type": "Tipo",
   "Sync": "Sincronizza",
   "Tasks": "Attività",
@@ -14,8 +14,8 @@
   "Failed": "Fallito",
   "Authenticator": "Autenticatore",
   "Retry": "Riprova",
-  "No user data source plugin installed": "Nessun plugin sorgente dati utente installato",
+  "No user data source plugin installed": "Nessun plugin origine dati utente installato",
   "View documentation": "Visualizza documentazione",
   "The synchronization has started. You can click on 'Tasks' to view the synchronization status.": "La sincronizzazione è iniziata. Puoi cliccare su 'Attività' per visualizzare lo stato della sincronizzazione.",
-  "The sync source API call failed. Please check the logs to troubleshoot the issue.": "La chiamata API alla sorgente di sincronizzazione è fallita. Controlla i registri per risolvere il problema."
+  "The sync source API call failed. Please check the logs to troubleshoot the issue.": "La chiamata API di sincronizzazione all' origine è fallita. Controlla i registri per risolvere il problema."
 }
