--- a/packages/plugins/@nocobase/plugin-auth/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/en-US.json
@@ -45,5 +45,6 @@
   "The maximum time limit allowed for refreshing a Token after it expires. After this time limit, the token cannot be automatically renewed, and the user needs to log in again.": "The maximum time limit allowed for refreshing a Token after it expires. After this time limit, the token cannot be automatically renewed, and the user needs to log in again.",
   "In configuration mode, the entire column becomes transparent. In non-configuration mode, the entire column will be hidden. Even if the entire column is hidden, its configured default values and other settings will still take effect.": "In configuration mode, the entire column becomes transparent. In non-configuration mode, the entire column will be hidden. Even if the entire column is hidden, its configured default values and other settings will still take effect.",
   "Your session has expired. Please sign in again.": "Your session has expired. Please sign in again.",
-  "Unauthenticated. Please sign in to continue.": "Unauthenticated. Please sign in to continue."
+  "Unauthenticated. Please sign in to continue.": "Unauthenticated. Please sign in to continue.",
+  "User not found. Please sign in again to continue.": "User not found. Please sign in again to continue."
 }
