--- a/packages/plugins/@nocobase/plugin-auth/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/zh-CN.json
@@ -44,5 +44,6 @@
   "The validity period of each issued API Token. After the Token expires, if it is within the session validity period and has not exceeded the refresh limit, the server will automatically issue a new Token to maintain the user session, otherwise the user is required to log in again. (Each Token can only be refreshed once)": "每次签发的 API Token 的有效期。Token 过期后，如果处于会话有效期内，并且没有超过刷新时限，服务端将自动签发新 Token 以保持用户会话，否则要求用户重新登录。（每个 Token 只能被刷新一次）",
   "The maximum time limit allowed for refreshing a Token after it expires. After this time limit, the token cannot be automatically renewed, and the user needs to log in again.": "Token 过期后允许刷新的最大时限，超过此时限后，Token 无法自动更新，用户需重新登录。",
   "Your session has expired. Please sign in again.": "您的会话已过期，请重新登录。",
-  "Unauthenticated. Please sign in to continue.": "未认证。请登录以继续。"
+  "Unauthenticated. Please sign in to continue.": "未认证。请登录以继续。",
+  "User not found. Please sign in again to continue.": "用户不存在。请重新登录以继续。"
 }
