--- a/packages/plugins/@nocobase/plugin-workflow-action-trigger/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-workflow-action-trigger/src/locale/it-IT.json
@@ -1,6 +1,6 @@
 {
   "Form event": "Evento modulo",
-  "Event triggers when submitted a workflow bound form action.": "L'evento si attiva quando viene inviata un'azione di un modulo associato a un flusso di lavoro.",
+  "Event triggers when submitted a workflow bound form action.": "L'evento si attiva quando viene inviata un'azione di un modulo associato a un workflow.",
   "Form data model": "Modello dati modulo",
   "Use a collection to match form data.": "Utilizza una raccolta per abbinare i dati del modulo.",
   "Associations to use": "Associazioni da utilizzare",
