--- a/packages/plugins/@nocobase/plugin-workflow/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-workflow/src/locale/zh-CN.json
@@ -233,5 +233,6 @@
   "After end of branches": "分支结束后",
   "Inside of branch": "分支内",
 
-  "Workflow todos": "流程待办"
+  "Workflow todos": "流程待办",
+  "New version enabled": "已启用新版本"
 }
