--- a/packages/plugins/@nocobase/plugin-acl/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-acl/src/locale/it-IT.json
@@ -4,4 +4,8 @@
   "New role": "Nuovo ruolo",
   "Permissions": "Permessi",
   "Desktop menu": "Menu desktop"
+  "Roles & Permissions": "Ruoli e permessi",
+  "General": "Generale",
+  "Plugin settings": "Impostazioni plugin",
+  "Data sources": "Origini dati"
 }
