--- a/packages/plugins/@nocobase/plugin-action-import/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-action-import/src/locale/it-IT.json
@@ -39,4 +39,13 @@
   "No data to import": "Nessun dato da importare",
   "Failed to import row {{row}}, {{message}}, row data: {{data}}": "Errore nell'importazione della riga {{row}}, {{message}}, dati della riga: {{data}}",
   "import-error": "Errore nell'importazione della riga {{rowIndex}}, dati della riga: {{rowData}}, causa: {{causeMessage}}"
+  "Import": "Importa",
+  "Import completed": "Importazione completata: {{success}} record importati, {{updated}} record aggiornati, {{skipped}} record saltati, totale {{total}} record",
+  "Successfully imported": "Importazione riuscita",
+  "Updated records": "Record aggiornati",
+  "Skipped records": "Record saltati",
+  "Total records": "Record totali",
+  "View result": "Visualizza risultato",
+  "ImportResult": "Importati {{success}}, aggiornati {{updated}}, saltati {{skipped}}, totale {{total}}",
+  "Task result": "Risultato attività"
 }
