--- a/packages/plugins/@nocobase/plugin-acl/src/locale/zh-CN.json
+++ b/packages/plugins/@nocobase/plugin-acl/src/locale/zh-CN.json
@@ -7,5 +7,12 @@
   "General": "通用",
   "Desktop menu": "桌面端菜单",
   "Plugin settings": "插件设置",
-  "Data sources": "数据源"
+  "Data sources": "数据源",
+  "Default": "默认",
+  "Allow use union": "可切换合并角色",
+  "Only use union": "默认合并角色",
+  "Role mode": "角色模式",
+  "Saved successfully": "保存成功",
+  "Please select role mode": "请选择角色模式",
+  "Full permissions": "全部权限"
 }
