--- a/packages/plugins/@nocobase/plugin-action-import/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-action-import/src/locale/it-IT.json
@@ -9,7 +9,7 @@
   "Step 1: Download template": "Passo 1: Scarica modello",
   "Step 2: Upload Excel": "Passo 2: Carica file Excel",
   "Step 3: Import options": "Passo 3: Opzioni di importazione",
-  "Download tips": "- Scarica il modello e compila i dati secondo il formato \\r\\n - Importa solo il primo foglio di lavoro \\r\\n - Non cambiare l'intestazione del modello per evitare errori di importazione",
+  "Download tips": "- Scarica il modello e compila i dati secondo il formato \r\n - Importa solo il primo foglio di lavoro \r\n - Non cambiare l'intestazione del modello per evitare errori di importazione",
   "Import warnings": "Puoi importare fino a {{limit}} righe di dati alla volta, qualsiasi eccedenza verrà ignorata.",
   "Upload placeholder": "Trascina qui il file o clicca per caricare, la dimensione del file non deve superare 80M",
   "Excel data importing": "Importazione dati Excel in corso",
