--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -552,7 +552,7 @@
     "Fields values": "Valori campi",
     "The field has been deleted": "Il campo è stato eliminato",
     "When submitting the following fields, the saved values are": "Quando si inviano i seguenti campi, i valori salvati sono",
-    "After successful submission": "Dopo una invio riuscito",
+    "After successful submission": "Dopo un invio riuscito",
     "Then": "Poi",
     "Stay on current page": "Resta sulla pagina corrente",
     "Redirect to": "Reindirizza a",
@@ -660,7 +660,7 @@
     "Button background color": "Colore sfondo del pulsante",
     "Highlight": "Evidenzia",
     "Danger red": "Pericolo rosso",
-    "Custom request": "Personalizza richiesta",
+    "Custom request": "Richiesta personalizzata",
     "Request settings": "Impostazioni richiesta",
     "Request URL": "URL richiesta",
     "Request method": "Metodo richiesta",
