--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -344,7 +344,7 @@
     "Edit chart": "Modifica grafico",
     "Add text": "Aggiungi testo",
     "Filterable fields": "Campi filtrabili",
-    "Edit button": "Pulsante Modifica",
+    "Edit button": "Modifica pulsante",
     "Hide": "Nascondi",
     "Enable actions": "Abilita operazioni",
     "Import": "Importa",
@@ -658,8 +658,8 @@
     "After clicking the custom button, the following field values will be assigned according to the following form.": "Dopo aver fatto clic sul pulsante personalizza, i seguenti valori verranno assegnati in base al seguente modulo.",
     "After clicking the custom button, the following fields of the current record will be saved according to the following form.": "Dopo aver fatto clic sul pulsante personalizza, i seguenti campi del record corrente verranno salvati in base al seguente modulo.",
     "Button background color": "Colore sfondo del pulsante",
-    "Highlight": "Evidenzia",
-    "Danger red": "Pericolo rosso",
+    "Highlight": "Evidenziato",
+    "Danger red": "Rosso pericolo",
     "Custom request": "Richiesta personalizzata",
     "Request settings": "Impostazioni richiesta",
     "Request URL": "URL richiesta",
