--- a/packages/plugins/@nocobase/plugin-action-import/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-action-import/src/locale/it-IT.json
@@ -40,7 +40,7 @@
   "Failed to import row {{row}}, {{message}}, row data: {{data}}": "Errore nell'importazione della riga {{row}}, {{message}}, dati della riga: {{data}}",
   "import-error": "Errore nell'importazione della riga {{rowIndex}}, dati della riga: {{rowData}}, causa: {{causeMessage}}"
   "Import": "Importa",
-  "Import completed": "Importazione completata: {{success}} record importati, {{updated}} record aggiornati, {{skipped}} record saltati, totale {{total}} record",
+  "Import completed": "Importazione completata: {{success}} record importati con successo, {{updated}} record aggiornati, {{skipped}} record saltati, totale {{total}} record",
   "Successfully imported": "Importazione riuscita",
   "Updated records": "Record aggiornati",
   "Skipped records": "Record saltati",
