--- a/packages/plugins/@nocobase/plugin-auth/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-auth/src/locale/it-IT.json
@@ -46,4 +46,10 @@
   "Your session has expired. Please sign in again.": "La tua sessione è scaduta. Accedi di nuovo.",
   "Unauthenticated. Please sign in to continue.": "Non autenticato. Accedi per continuare.",
   "User not found. Please sign in again to continue.": "Utente non trovato. Accedi di nuovo per continuare."
+  "Select Import data": "Seleziona dati da importare",
+  "Select Import Plugins": "Seleziona plugin di importazione",
+  "Select User Collections": "Seleziona raccolte utente",
+  "Basic Data": "Dati di base",
+  "Optional Data": "Dati opzionali",
+  "User Data": "Dati utente"
 }
