--- a/packages/plugins/@nocobase/plugin-block-workbench/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-block-workbench/src/locale/it-IT.json
@@ -7,4 +7,12 @@
   "Unknown error": "Errore sconosciuto",
   "The image size is too large. Please compress it to below 1MB before uploading": "La dimensione dell'immagine è troppo grande. Si prega di comprimerla sotto 1MB prima di caricarla.",
   "QR code recognition failed, please scan again": "Riconoscimento del codice QR fallito, si prega di scansionare di nuovo."
+  "Action panel": "Pannello azioni",
+  "Layout": "Layout",
+  "Grid": "Griglia",
+  "List": "Elenco",
+  "Add popup": "Aggiungi popup",
+  "Add custom request": "Aggiungi richiesta personalizzata",
+  "At least 1, up to 6": "Almeno 1, fino a 6",
+  "Items per row": "Elementi per riga"
 }
