--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/it-IT.json
@@ -1,22 +1,4 @@
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-/**
- * This file is part of the NocoBase (R) project.
- * Copyright (c) 2020-2024 NocoBase Co., Ltd.
- * Authors: NocoBase Team.
- *
- * This project is dual-licensed under AGPL-3.0 and NocoBase Commercial License.
- * For more information, please refer to: https://www.nocobase.com/agreement.
- */
-
-export default {
+{
   "Configure calendar": "Configura calendario",
   "Title field": "Campo titolo",
   "Custom title": "Titolo personalizzato",
@@ -62,4 +44,12 @@ export default {
   "Repeats": "Ripeti",
   "Background color field": "Campo colore sfondo",
   "Not selected": "Non selezionato"
-};
+  "Update record": "Aggiorna record",
+  "Title": "Titolo",
+  "Month": "Mese",
+  "Week": "Settimana",
+  "{{count}} more items": "{{count}} altri elementi",
+  "Color field": "Campo colore",
+  "Default view": "Vista predefinita",
+  "Event open mode": "Modalità apertura evento"
+}
