--- a/packages/plugins/@nocobase/plugin-calendar/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-calendar/src/locale/it-IT.json
@@ -31,6 +31,7 @@
   "View record": "Visualizza record",
   "Details": "Dettagli",
   "Customize": "Personalizza",
+  "Update record": "Aggiorna record",
   "Popup": "Popup",
   "Updated successfully": "Aggiornato con successo",
   "Custom request": "Richiesta personalizzata",
@@ -41,14 +42,12 @@
   "Weekly": "Settimanale",
   "Monthly": "Mensile",
   "Yearly": "Annuale",
-  "Repeats": "Ripeti",
-  "Background color field": "Campo colore sfondo",
-  "Not selected": "Non selezionato"
-  "Update record": "Aggiorna record",
+  "Repeats": "Ripeti",  
   "Title": "Titolo",
   "Month": "Mese",
   "Week": "Settimana",
   "{{count}} more items": "{{count}} altri elementi",
+  "Not selected": "Non selezionato",
   "Color field": "Campo colore",
   "Default view": "Vista predefinita",
   "Event open mode": "Modalità apertura evento"
