--- a/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-data-visualization/src/locale/it-IT.json
@@ -72,10 +72,11 @@
   "isPercent": "èPercentuale",
   "isGroup": "èGruppo",
   "smooth": "smussato",
+  "Collapse": "Comprimi",
   "Expand": "Espandi",
   "Current filter": "Filtro corrente",
   "Add custom field": "Aggiungi campo personalizzato",
-  "To filter with custom fields, use \"Current filter\" variables in the chart configuration.": "Per filtrare con campi personalizzati, utilizza le variabili \"Filtro corrente\" nella configurazione del grafico.",
+  "To filter with custom fields, use \"Current filter\" variables in the chart configuration.": "Per filtrare con campi personalizzati, utilizza le variabili \"Current filter\" nella configurazione del grafico.",
   "Input": "Input",
   "Date range": "Intervallo date",
   "Time range": "Intervallo tempo",
