--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -127,7 +127,7 @@
     "Tablet device": "Tablet",
     "Desktop device": "Desktop",
     "Large screen device": "Schermo di grandi dimensioni",
-    "Collapse": "Collassa",
+    "Collapse": "Comprimi",
     "Select data source": "Seleziona origine dati",
     "Calendar": "Calendario",
     "Delete events": "Elimina eventi",
@@ -171,10 +171,10 @@
     "Add new": "Aggiungi nuovo",
     "Add record": "Aggiungi record",
     "Add child": "Aggiungi figlio",
-    "Collapse all": "Collassare tutto",
-    "Expand all": "Espandere tutto",
-    "Expand/Collapse": "Espandere/Collassare",
-    "Default collapse": "Collassa di default",
+    "Collapse all": "Comprimi tutto",
+    "Expand all": "Espandi tutto",
+    "Expand/Collapse": "Espandi/Comprimi",
+    "Default collapse": "Comprimi di default",
     "Tree table": "Tabella ad albero",
     "Custom field display name": "Nome visualizzato campo personalizzato ",
     "Display fields": "Visualizza campi",
@@ -841,7 +841,7 @@
     "This variable has been deprecated and can be replaced with \"Current form\"": "Questa variabile è stata deprecata e può essere sostituita con \"Current form\"",
     "The value of this variable is derived from the query string of the page URL. This variable can only be used normally when the page has a query string.": "Il valore di questa variabile deriva dalla stringa di ricerca nell'URL della pagina. Questa variabile può essere utilizzata normalmente solo quando la pagina ha una stringa di ricerca.",
     "URL search params": "Parametri di ricerca URL",
-    "Expand All": "Espandere tutto",
+    "Expand All": "Espandi tutto",
     "Search": "Ricerca",
     "Clear default value": "Cancella il valore predefinito",
     "Open in new window": "Apri in una nuova finestra",
