--- a/packages/plugins/@nocobase/plugin-acl/src/locale/en-US.json
+++ b/packages/plugins/@nocobase/plugin-acl/src/locale/en-US.json
@@ -11,5 +11,8 @@
   "Saved successfully": "Saved successfully",
   "Please select role mode": "Please select role mode",
   "Full permissions": "Full permissions",
-  "Role mode doc": "https://docs.nocobase.com/handbook/acl/manual"
+  "Role mode doc": "https://docs.nocobase.com/handbook/acl/manual",
+  "Do not use role union. Users need to switch between their roles individually.": "Do not use role union. Users need to switch between their roles individually.",
+  "Allow users to use role union, which means they can use permissions from all their roles simultaneously, or switch between individual roles.": "Allow users to use role union, which means they can use permissions from all their roles simultaneously, or switch between individual roles.",
+  "Force users to use only role union. They cannot switch between individual roles.": "Force users to use only role union. They cannot switch between individual roles."
 }
