--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -753,7 +753,7 @@
     "Update all data?": "Aggiornare tutti i dati?",
     "Remains the same": "Rimane lo stesso",
     "Changed to": "Cambiato in",
-    "Clear": "Pulisci",
+    "Clear": "Cancella",
     "Add attach": "Aggiungi allegato",
     "Please select the records to be updated": "Si prega di selezionare i record da aggiornare",
     "Selector": "Selettore",
