--- a/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-multi-app-manager/src/locale/it-IT.json
@@ -8,4 +8,7 @@
   "Manage applications": "Gestisci applicazioni",
   "Standalone deployment": "Distribuzione autonoma",
   "Auto start": "Avvio automatico"
+  "Start mode": "Modalità di avvio",
+  "Start on first visit": "Avvia alla prima visita",
+  "Start with main application": "Avvia con l'applicazione principale"
 }
