--- a/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-notification-in-app-message/src/locale/it-IT.json
@@ -24,5 +24,6 @@
   "Mark as read": "Segna come letto",
   "Support two types of links: internal links and external links. If using an internal link, the link starts with\"/\", for example, \"/m\". If using an external link, the link starts with \"http\", for example, \"https://example.com\".": "Supporta due tipi di link: link interni e link esterni. Se si utilizza un link interno, il link inizia con \"/\", ad esempio, \"/m\". Se si utilizza un link esterno, il link inizia con \"http\", ad esempio, \"https://example.com\".",
   "Details page for mobile": "Pagina dettagli per mobile",
-  "The message page has already been created.": "La pagina dei messaggi è già stata creata."
+  "The message page has already been created.": "La pagina dei messaggi è già stata creata.",
+  "When select receivers from node result, only support ID of user (or IDs array of users). Others will not match any user.": "Quando selezioni i destinatari dal risultato del nodo, supporta solo l'ID dell'utente (o l'array di ID degli utenti). Gli altri non corrisponderanno a nessun utente."
 }
