--- a/packages/plugins/@nocobase/plugin-notification-manager/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-notification-manager/src/locale/it-IT.json
@@ -3,9 +3,7 @@
   "Notification": "Notifica",
   "Channels": "Canali",
   "Channel": "Canale",
-  "Channel title": "Titolo canale",
-  "Channel name": "Nome canale",
-  "Channel display name": "Nome visualizzato canale",
+  "Channel title": "Titolo canale",  
   "Content": "Contenuto",
   "Receivers": "Destinatari",
   "Receiver": "Destinatario",
@@ -16,6 +14,8 @@
   "Description": "Descrizione",
   "Notification type": "Tipo di notifica",
   "Actions": "Azioni",
+  "Channel name": "Nome canale",
+  "Channel display name": "Nome visualizzato canale",
   "Configure": "Configura",
   "Add new": "Aggiungi nuovo",
   "Trigger From": "Attivato da",
@@ -28,6 +28,8 @@
   "Select users": "Seleziona utenti",
   "Query users": "Cerca utenti",
   "Receiver type": "Tipo di destinatario",
+  "Manual input": "Inserimento manuale",
+  "Select user": "Seleziona utente",
   "No channel enabled yet": "Nessun canale ancora abilitato",
   "Success": "Successo",
   "Fail": "Fallito",
