--- a/packages/plugins/@nocobase/plugin-theme-editor/src/locale/it-IT.json
+++ b/packages/plugins/@nocobase/plugin-theme-editor/src/locale/it-IT.json
@@ -19,4 +19,18 @@
   "Save theme": "Salva tema",
   "Please set a name for this theme": "Imposta un nome per questo tema",
   "Please input the theme name": "Inserisci il nome del tema"
+  "Theme editor": "Editor temi",
+  "Themes": "Temi",
+  "Delete theme": "Elimina tema",
+  "Deletion is unrecoverable. Confirm deletion?": "L'eliminazione è irreversibile. Confermare l'eliminazione?",
+  "Deleted successfully": "Eliminato con successo",
+  "Updated successfully": "Aggiornato con successo",
+  "User selectable": "Selezionabile dall'utente",
+  "Default theme": "Tema predefinito",
+  "Add new theme": "Aggiungi nuovo tema",
+  "Edit based on current theme": "Modifica basata sul tema corrente",
+  "Create a brand new theme": "Crea un tema completamente nuovo",
+  "Dark": "Scuro",
+  "Compact": "Compatto",
+  "Compact dark": "Scuro compatto"
 }
